--- a/cinnamon/cinnamon.css
+++ b/cinnamon/cinnamon.css
@@ -62,7 +62,7 @@ stage {
     color: rgba(240, 240, 240, 0.45);
     background-color: #000000;
     border-color: 1px solid #272727;
-    box-shadow: inset 0 2px 4px rgba(56, 56, 56, 0.05); }
+    box-shadow: inset 0 2px 4px #000000; }
   .popup-menu #notification StEntry StIcon.capslock-warning, #menu-search-entry StIcon.capslock-warning {
     icon-size: 16px;
     warning-color: #F27835;
