--- a/cinnamon/cinnamon.css
+++ b/cinnamon/cinnamon.css
@@ -11,16 +11,16 @@ stage {
   padding: 5px 32px;
   transition-duration: 0;
   color: #f0f0f0;
-  background-color: #454545;
+  background-color: #000000;
   border: 1px solid #202020;
-  box-shadow: inset 0 2px 4px rgba(69, 69, 69, 0.05); }
+  box-shadow: inset 0 2px 4px #000000; }
   .popup-menu #notification .notification-button, .popup-menu #notification .notification-icon-button, .notification-button, .notification-icon-button, .modal-dialog-button-box .modal-dialog-button, .sound-button, .popup-menu #notification .notification-button:focus, .popup-menu #notification .notification-icon-button:focus, .notification-button:focus, .notification-icon-button:focus, .modal-dialog-button-box .modal-dialog-button:focus, .sound-button:focus, .popup-menu #notification .notification-button:hover, .popup-menu #notification .notification-icon-button:hover, .notification-button:hover, .notification-icon-button:hover, .modal-dialog-button-box .modal-dialog-button:hover, .sound-button:hover, .popup-menu #notification .notification-button:hover:focus, .popup-menu #notification .notification-icon-button:hover:focus, .notification-button:hover:focus, .notification-icon-button:hover:focus, .modal-dialog-button-box .modal-dialog-button:hover:focus, .sound-button:hover:focus, .popup-menu #notification .notification-button:active, .popup-menu #notification .notification-icon-button:active, .notification-button:active, .notification-icon-button:active, .modal-dialog-button-box .modal-dialog-button:active, .sound-button:active, .popup-menu #notification .notification-button:active:focus, .popup-menu #notification .notification-icon-button:active:focus, .notification-button:active:focus, .notification-icon-button:active:focus, .modal-dialog-button-box .modal-dialog-button:active:focus, .sound-button:active:focus, .popup-menu #notification .notification-button:insensitive, .popup-menu #notification .notification-icon-button:insensitive, .notification-button:insensitive, .notification-icon-button:insensitive, .modal-dialog-button-box .modal-dialog-button:insensitive, .sound-button:insensitive {
     border-radius: 2px; }
   .popup-menu #notification .notification-button:focus, .popup-menu #notification .notification-icon-button:focus, .notification-button:focus, .notification-icon-button:focus, .modal-dialog-button-box .modal-dialog-button:focus, .sound-button:focus {
     color: #f0f0f0;
-    background-color: #454545;
+    background-color: #000000;
     border: 1px solid #9d9d9d;
-    box-shadow: inset 0 2px 4px rgba(69, 69, 69, 0.05); }
+    box-shadow: inset 0 2px 4px #000000; }
   .popup-menu #notification .notification-button:hover, .popup-menu #notification .notification-icon-button:hover, .notification-button:hover, .notification-icon-button:hover, .modal-dialog-button-box .modal-dialog-button:hover, .sound-button:hover {
     color: #f0f0f0;
     background-color: #525252;
@@ -30,7 +30,7 @@ stage {
     color: #f0f0f0;
     background-color: #525252;
     border: 1px solid #9d9d9d;
-    box-shadow: inset 0 2px 4px rgba(69, 69, 69, 0.05); }
+    box-shadow: inset 0 2px 4px #000000; }
   .popup-menu #notification .notification-button:active, .popup-menu #notification .notification-icon-button:active, .notification-button:active, .notification-icon-button:active, .modal-dialog-button-box .modal-dialog-button:active, .sound-button:active, .popup-menu #notification .notification-button:active:focus, .popup-menu #notification .notification-icon-button:active:focus, .notification-button:active:focus, .notification-icon-button:active:focus, .modal-dialog-button-box .modal-dialog-button:active:focus, .sound-button:active:focus {
     color: #ffffff;
     background-color: #9d9d9d;
@@ -39,8 +39,8 @@ stage {
   .popup-menu #notification .notification-button:insensitive, .popup-menu #notification .notification-icon-button:insensitive, .notification-button:insensitive, .notification-icon-button:insensitive, .modal-dialog-button-box .modal-dialog-button:insensitive, .sound-button:insensitive {
     color: rgba(240, 240, 240, 0.45);
     border: 1px solid rgba(32, 32, 32, 0.55);
-    background-color: rgba(69, 69, 69, 0.55);
-    box-shadow: inset 0 2px 4px rgba(69, 69, 69, 0.05); }
+    background-color: #000000;
+    box-shadow: inset 0 2px 4px #000000; }
 
 .popup-menu #notification StEntry, #menu-search-entry {
   padding: 7px;
